Remove obsolete intl arb

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,4 +30,6 @@
   "language": "Language",
   "tagsCommaSeparated": "Tags (comma separated)",
   "fitWidth": "Fit Width"
+  ,
+  "continueReading": "Continue Reading"
 }
