Log and surface partial import failures

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,6 +17,7 @@
   "delete": "Delete",
   "edit": "Edit",
   "importFailed": "Import failed: {error}",
+  "importPartialFailure": "Some items failed to import",
   "bookmarks": "Bookmarks",
   "noBookmarks": "No bookmarks",
   "pageWithNumber": "Page {page}",
