Handle image precache errors

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,5 +32,6 @@
   "tagsCommaSeparated": "Tags (comma separated)",
   "fitWidth": "Fit Width",
   "clear": "Clear",
+  "pageLoadFailed": "Failed to load page {page}",
   "continueReading": "Continue Reading"
 }
